--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,6 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
-//    implementation 'com.google.firebase:firebase-auth:18.1.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -35,11 +34,15 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:okhttp:3.8.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-    //Firebase
-//    implementation 'com.google.firebase:firebase-auth:19.1.0'
-//    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+
     // Glide image library
-    implementation 'com.github.bumptech.glide:glide:4.3.1'
+    implementation 'pub.devrel:easypermissions:1.2.0'
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+    implementation 'com.vincent.filepicker:MultiTypeFilePicker:1.0.7'
+    //Picasso image dan Async
+    implementation 'com.loopj.android:android-async-http:1.4.9'
+//    implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
