--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Main2Activity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/ActionBar" />
         <activity android:name=".Auth.RegisterActivity" />
